[package]
name = "valkyrie-interpreter"
version = "0.0.0"
authors = ["192607617@qq.com"]
description = "High level intermediate representation for Nyar"
repository = "https://github.com/nyar-vm/valkyrie.rs"
documentation = "https://docs.rs/valkyrie-interpreter"
license = "MPL-2.0"
edition = "2021"


[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde-types = "0.1.1"
toml = "0.7.0"
json5 = "0.4.1"

[dependencies.valkyrie-types]
version = "0.0.*"
features = []
path = 'C:\Users\Dell\CLionProjects\valkyrie.rs\projects\valkyrie-types'


[dependencies.valkyrie-parser]
version = "0.2.*"
features = []
path = 'C:\Users\Dell\CLionProjects\valkyrie.rs\projects\valkyrie-parser'

[dependencies.valkyrie-ast]
version = "0.0.*"
features = []
path = 'C:\Users\Dell\CLionProjects\valkyrie.rs\projects\valkyrie-ast'

#[dependencies.valkyrie-error]
#version = "0.1.*"
#features = []
#path = 'C:\Users\Dell\CLionProjects\valkyrie.rs\projects\valkyrie-errors'
#
