[package]
name = "valkyrie-interpreter"
version = "0.0.0"
authors = ["192607617@qq.com"]
description = "High level intermediate representation for Nyar"
repository = "https://github.com/nyar-vm/valkyrie.rs"
documentation = "https://docs.rs/valkyrie-interpreter"
license = "MPL-2.0"
edition = "2021"


[dependencies]
dashmap = "5.5.3"
async-recursion = "1.0.5"
clap = { version = "4.4.2", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde-types = "0.1.1"
toml = "0.8.0"
json5 = "0.4.1"

[dependencies.valkyrie-types]
version = "0.0.*"
features = []
path = 'C:\Users\Dell\CLionProjects\valkyrie.rs\projects\valkyrie-types'

[dependencies.valkyrie-ast]
version = "0.1.*"
features = []
path = 'C:\Users\Dell\CLionProjects\valkyrie.rs\projects\valkyrie-ast'

#[dependencies.valkyrie-error]
#version = "0.1.3"
#features = ["json5"]
#path = 'C:\Users\Dell\CLionProjects\valkyrie.rs\projects\valkyrie-errors'
#
