[package]
name = "vpm"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Valkyrie package manager"
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/vpm"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
